feat: add vue-datepicker package for quote of the day button

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vuedraggable": "^2.24.3"
     },
     "dependencies": {
+        "@mathieustan/vue-datepicker": "^0.2.11",
         "axios": "^0.21.1"
     }
 }
